@@ -1806,6 +1806,14 @@ class DatabaseAdmin(ABC):
     An abstract class defining the interface for a database admin object.
     This supports generic keyspace crud, as well as spawning databases,
     without committing to a specific database architecture (e.g. Astra DB).
+
+    Attributes:
+        environment: a string representing the target Data API environment.
+            It can be left unspecified for the default value of `Environment.PROD`.
+            Only Astra DB environments can be meaningfully supplied.
+        spawner_database: a Database object, possibly async, which originated
+            this admin. This reference is kept in order to mutate its working
+            keyspace when asked to do so.
     """
 
     environment: str
@@ -1913,7 +1921,12 @@ class DatabaseAdmin(ABC):
 
 class ProviderQueryingDatabaseAdmin(DatabaseAdmin):
     """
-    TODO
+    This class captures the common behaviour of AstraDBDatabaseAdmin and
+    DataAPIDatabaseAdmin, i.e. the find-providers methods.
+
+    Attributes:
+        _api_commander: an APICommander for internal use, to query the Data API.
+        api_options: the database admin's API options in use.
     """
 
     _api_commander: APICommander
@@ -1922,6 +1935,7 @@ class ProviderQueryingDatabaseAdmin(DatabaseAdmin):
     def find_embedding_providers(
         self,
         *,
+        filter_model_status: str | None = None,
         database_admin_timeout_ms: int | None = None,
         request_timeout_ms: int | None = None,
         timeout_ms: int | None = None,
@@ -1930,6 +1944,11 @@ class ProviderQueryingDatabaseAdmin(DatabaseAdmin):
         Query the API for the full information on available embedding providers.
 
         Args:
+            filter_model_status: A string to filter models by their support status.
+                Examples: "SUPPORTED", "DEPRECATED". Passing an empty string tells
+                the Data API to return all models, regardless of their support status.
+                If omitted, the Data API default behaviour is to return fully supported
+                models only.
             database_admin_timeout_ms: a timeout, in milliseconds, to impose on the
                 underlying API request. If not provided, this object's defaults apply.
                 (This method issues a single API request, hence all timeout parameters
@@ -1941,7 +1960,8 @@ class ProviderQueryingDatabaseAdmin(DatabaseAdmin):
             A `FindEmbeddingProvidersResult` object with the complete information
             returned by the API about available embedding providers
 
-        Example (output abridged and indented for clarity):
+        Example
+            >>> # (output abridged and indented for clarity):
             >>> admin_for_my_db.find_embedding_providers()
             FindEmbeddingProvidersResult(embedding_providers=..., openai, ...)
             >>> admin_for_my_db.find_embedding_providers().embedding_providers
@@ -1963,9 +1983,14 @@ class ProviderQueryingDatabaseAdmin(DatabaseAdmin):
             request_timeout_ms=request_timeout_ms,
             timeout_ms=timeout_ms,
         )
+        fep_body = (
+            {}
+            if filter_model_status is None
+            else {"options": {"filterModelStatus": filter_model_status}}
+        )
         logger.info("findEmbeddingProviders")
         fe_response = self._api_commander.request(
-            payload={"findEmbeddingProviders": {}},
+            payload={"findEmbeddingProviders": fep_body},
             timeout_context=_TimeoutContext(
                 request_ms=_database_admin_timeout_ms, label=_da_label
             ),
@@ -1982,6 +2007,7 @@ class ProviderQueryingDatabaseAdmin(DatabaseAdmin):
     async def async_find_embedding_providers(
         self,
         *,
+        filter_model_status: str | None = None,
         database_admin_timeout_ms: int | None = None,
         request_timeout_ms: int | None = None,
         timeout_ms: int | None = None,
@@ -1991,6 +2017,11 @@ class ProviderQueryingDatabaseAdmin(DatabaseAdmin):
         Async version of the method, for use in an asyncio context.
 
         Args:
+            filter_model_status: A string to filter models by their support status.
+                Examples: "SUPPORTED", "DEPRECATED". Passing an empty string tells
+                the Data API to return all models, regardless of their support status.
+                If omitted, the Data API default behaviour is to return fully supported
+                models only.
             database_admin_timeout_ms: a timeout, in milliseconds, to impose on the
                 underlying API request. If not provided, this object's defaults apply.
                 (This method issues a single API request, hence all timeout parameters
@@ -2002,7 +2033,8 @@ class ProviderQueryingDatabaseAdmin(DatabaseAdmin):
             A `FindEmbeddingProvidersResult` object with the complete information
             returned by the API about available embedding providers
 
-        Example (output abridged and indented for clarity):
+        Example:
+            >>> # (output abridged and indented for clarity):
             >>> asyncio.run(admin_for_my_db.find_embedding_providers())
             FindEmbeddingProvidersResult(embedding_providers=..., openai, ...)
             >>> asyncio.run(
@@ -2026,9 +2058,14 @@ class ProviderQueryingDatabaseAdmin(DatabaseAdmin):
             request_timeout_ms=request_timeout_ms,
             timeout_ms=timeout_ms,
         )
+        fep_body = (
+            {}
+            if filter_model_status is None
+            else {"options": {"filterModelStatus": filter_model_status}}
+        )
         logger.info("findEmbeddingProviders, async")
         fe_response = await self._api_commander.async_request(
-            payload={"findEmbeddingProviders": {}},
+            payload={"findEmbeddingProviders": fep_body},
             timeout_context=_TimeoutContext(
                 request_ms=_database_admin_timeout_ms, label=_da_label
             ),
@@ -2045,6 +2082,7 @@ class ProviderQueryingDatabaseAdmin(DatabaseAdmin):
     def find_reranking_providers(
         self,
         *,
+        filter_model_status: str | None = None,
         database_admin_timeout_ms: int | None = None,
         request_timeout_ms: int | None = None,
         timeout_ms: int | None = None,
@@ -2053,6 +2091,11 @@ class ProviderQueryingDatabaseAdmin(DatabaseAdmin):
         Query the API for the full information on available reranking providers.
 
         Args:
+            filter_model_status: A string to filter models by their support status.
+                Examples: "SUPPORTED", "DEPRECATED". Passing an empty string tells
+                the Data API to return all models, regardless of their support status.
+                If omitted, the Data API default behaviour is to return fully supported
+                models only.
             database_admin_timeout_ms: a timeout, in milliseconds, to impose on the
                 underlying API request. If not provided, this object's defaults apply.
                 (This method issues a single API request, hence all timeout parameters
@@ -2064,7 +2107,8 @@ class ProviderQueryingDatabaseAdmin(DatabaseAdmin):
             A `FindRerankingProvidersResult` object with the complete information
             returned by the API about available reranking providers
 
-        Example (output abridged and indented for clarity):
+        Example:
+            >>> # (output abridged and indented for clarity):
             >>> admin_for_my_db.find_reranking_providers()
             FindRerankingProvidersResult(reranking_providers=nvidia)
             >>> admin_for_my_db.find_reranking_providers().reranking_providers
@@ -2090,9 +2134,14 @@ class ProviderQueryingDatabaseAdmin(DatabaseAdmin):
             request_timeout_ms=request_timeout_ms,
             timeout_ms=timeout_ms,
         )
+        frp_body = (
+            {}
+            if filter_model_status is None
+            else {"options": {"filterModelStatus": filter_model_status}}
+        )
         logger.info("findRerankingProviders")
         fr_response = self._api_commander.request(
-            payload={"findRerankingProviders": {}},
+            payload={"findRerankingProviders": frp_body},
             timeout_context=_TimeoutContext(
                 request_ms=_database_admin_timeout_ms, label=_da_label
             ),
@@ -2109,6 +2158,7 @@ class ProviderQueryingDatabaseAdmin(DatabaseAdmin):
     async def async_find_reranking_providers(
         self,
         *,
+        filter_model_status: str | None = None,
         database_admin_timeout_ms: int | None = None,
         request_timeout_ms: int | None = None,
         timeout_ms: int | None = None,
@@ -2118,6 +2168,11 @@ class ProviderQueryingDatabaseAdmin(DatabaseAdmin):
         Async version of the method, for use in an asyncio context.
 
         Args:
+            filter_model_status: A string to filter models by their support status.
+                Examples: "SUPPORTED", "DEPRECATED". Passing an empty string tells
+                the Data API to return all models, regardless of their support status.
+                If omitted, the Data API default behaviour is to return fully supported
+                models only.
             database_admin_timeout_ms: a timeout, in milliseconds, to impose on the
                 underlying API request. If not provided, this object's defaults apply.
                 (This method issues a single API request, hence all timeout parameters
@@ -2129,7 +2184,8 @@ class ProviderQueryingDatabaseAdmin(DatabaseAdmin):
             A `FindRerankingProvidersResult` object with the complete information
             returned by the API about available reranking providers
 
-        Example (output abridged and indented for clarity):
+        Example:
+            >>> # (output abridged and indented for clarity):
             >>> asyncio.run(admin_for_my_db.find_reranking_providers())
             FindRerankingProvidersResult(reranking_providers=nvidia)
             >>> asyncio.run(
@@ -2157,9 +2213,14 @@ class ProviderQueryingDatabaseAdmin(DatabaseAdmin):
             request_timeout_ms=request_timeout_ms,
             timeout_ms=timeout_ms,
         )
+        frp_body = (
+            {}
+            if filter_model_status is None
+            else {"options": {"filterModelStatus": filter_model_status}}
+        )
         logger.info("findRerankingProviders, async")
         fr_response = await self._api_commander.async_request(
-            payload={"findRerankingProviders": {}},
+            payload={"findRerankingProviders": frp_body},
             timeout_context=_TimeoutContext(
                 request_ms=_database_admin_timeout_ms, label=_da_label
             ),
@@ -2226,6 +2287,16 @@ class AstraDBDatabaseAdmin(ProviderQueryingDatabaseAdmin):
         in the Database, Collection and Table classes. Check the provided token
         if "Unauthorized" errors are encountered.
     """
+
+    # Formal assignments to convince pdoc to document these four inherited methods:
+    find_embedding_providers = ProviderQueryingDatabaseAdmin.find_embedding_providers
+    async_find_embedding_providers = (
+        ProviderQueryingDatabaseAdmin.async_find_embedding_providers
+    )
+    find_reranking_providers = ProviderQueryingDatabaseAdmin.find_reranking_providers
+    async_find_reranking_providers = (
+        ProviderQueryingDatabaseAdmin.async_find_reranking_providers
+    )
 
     def __init__(
         self,
@@ -3352,6 +3423,16 @@ class DataAPIDatabaseAdmin(ProviderQueryingDatabaseAdmin):
         in the Database, Collection and Table classes. Check the provided token
         if "Unauthorized" errors are encountered.
     """
+
+    # Formal assignments to convince pdoc to document these four inherited methods:
+    find_embedding_providers = ProviderQueryingDatabaseAdmin.find_embedding_providers
+    async_find_embedding_providers = (
+        ProviderQueryingDatabaseAdmin.async_find_embedding_providers
+    )
+    find_reranking_providers = ProviderQueryingDatabaseAdmin.find_reranking_providers
+    async_find_reranking_providers = (
+        ProviderQueryingDatabaseAdmin.async_find_reranking_providers
+    )
 
     def __init__(
         self,
